--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -32,12 +32,12 @@
 				<div class="sp-logo-wrap pull-left">
 					<a href="index.html">
 						<img class="brand-img mr-10" src="dist/img/logo.png" alt="brand"/>
-						<span class="brand-text">Philbert</span>
+						<!--<span class="brand-text">CertiSoft</span>-->
 					</a>
 				</div>
 				<div class="form-group mb-0 pull-right">
-					<span class="inline-block pr-10">Don't have an account?</span>
-					<a class="inline-block btn btn-info btn-success btn-rounded btn-outline" href="signup.html">Sign Up</a>
+					<span class="inline-block pr-10">¿Nuevo en CertiSoft?</span>
+					<a class="inline-block btn btn-info btn-success btn-rounded btn-outline" href="signup.html">Regístrate</a>
 				</div>
 				<div class="clearfix"></div>
 			</header>
@@ -52,31 +52,31 @@
 								<div class="row">
 									<div class="col-sm-12 col-xs-12">
 										<div class="mb-30">
-											<h3 class="text-center txt-dark mb-10">Sign in to Philbert</h3>
-											<h6 class="text-center nonecase-font txt-grey">Enter your details below</h6>
+											<h3 class="text-center txt-dark mb-10">Inicia sesión en CertiSoft</h3>
+											<h6 class="text-center nonecase-font txt-grey">Evaluación de proyectos</h6>
 										</div>	
 										<div class="form-wrap">
 											<form action="#">
 												<div class="form-group">
-													<label class="control-label mb-10" for="exampleInputEmail_2">Email address</label>
-													<input type="email" class="form-control" required="" id="exampleInputEmail_2" placeholder="Enter email">
+													<label class="control-label mb-10" for="exampleInputEmail_2">Dirección de correo electrónico</label>
+													<input type="email" class="form-control" required="" id="exampleInputEmail_2" placeholder="Introduzca Email">
 												</div>
 												<div class="form-group">
-													<label class="pull-left control-label mb-10" for="exampleInputpwd_2">Password</label>
-													<a class="capitalize-font txt-primary block mb-10 pull-right font-12" href="forgot-password.html">forgot password ?</a>
+													<label class="pull-left control-label mb-10" for="exampleInputpwd_2">Contraseña</label>
+													<a class="capitalize-font txt-primary block mb-10 pull-right font-12" href="forgot-password.html">¿Olvidaste la contraseña?</a>
 													<div class="clearfix"></div>
-													<input type="password" class="form-control" required="" id="exampleInputpwd_2" placeholder="Enter pwd">
+													<input type="password" class="form-control" required="" id="exampleInputpwd_2" placeholder="Introduzca contraseña">
 												</div>
 												
 												<div class="form-group">
 													<div class="checkbox checkbox-primary pr-10 pull-left">
 														<input id="checkbox_2" required="" type="checkbox">
-														<label for="checkbox_2"> Keep me logged in</label>
+														<label for="checkbox_2"> Mantenerte logueado</label>
 													</div>
 													<div class="clearfix"></div>
 												</div>
 												<div class="form-group text-center">
-													<button type="submit" class="btn btn-info btn-success btn-rounded">sign in</button>
+													<button type="submit" class="btn btn-info btn-success btn-rounded">Iniciar sesión</button>
 												</div>
 											</form>
 										</div>
