Modificación en login

--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 				</div>
 				<div class="form-group mb-0 pull-right">
 					<span class="inline-block pr-10">¿Nuevo en CertiSoft?</span>
-					<a class="inline-block btn btn-info btn-success btn-rounded btn-outline" href="signup.html">Regístrate</a>
+					<a class="inline-block btn btn-info btn-success btn-rounded btn-outline" href="registro.html">Regístrate</a>
 				</div>
 				<div class="clearfix"></div>
 			</header>
