--- a/login.html
+++ b/login.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>CertiSoft | Evaluando proyectos para la certificación ISO/IEC 33000</title>
-		<meta name="description" content="CertiSoft | Evaluando proyectos para la certificación ISO/IEC 33000" />
-		<meta name="keywords" content="iso 33000, evaluacion software" />
-		<meta name="author" content="Jose Angel Martinez"/>
 		
-		<!-- Favicon -->
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
-		
-		<!-- vector map CSS -->
-		<link href="libs/bower_components/jasny-bootstrap/docs/dist/css/jasny-bootstrap.min.css" rel="stylesheet" type="text/css"/>
+
 		
 		
 		
@@ -30,7 +19,7 @@
 		<div class="wrapper pa-0">
 			<header class="sp-header">
 				<div class="sp-logo-wrap pull-left">
-					<a href="index.html">
+					<a href="#">
 						<img class="brand-img mr-10" src="dist/img/logo.png" alt="brand"/>
 						<!--<span class="brand-text">CertiSoft</span>-->
 					</a>
@@ -71,13 +60,17 @@
 												<div class="form-group">
 													<div class="checkbox checkbox-primary pr-10 pull-left">
 														<input id="checkbox_2" required="" type="checkbox">
-														<label for="checkbox_2"> Mantenerte logueado</label>
+														<label for="checkbox_2">Recordar mis datos</a></label>
 													</div>
 													<div class="clearfix"></div>
 												</div>
 												<div class="form-group text-center">
 													<button type="submit" class="btn btn-info btn-success btn-rounded">Iniciar sesión</button>
 												</div>
+
+												
+
+
 											</form>
 										</div>
 									</div>	
