--- a/login.html
+++ b/login.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		
 
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<title>CertiSoft | Evaluando proyectos para la certificación ISO/IEC 33000</title>
+		<meta name="description" content="CertiSoft | Evaluando proyectos para la certificación ISO/IEC 33000" />
+		<meta name="keywords" content="iso 33000, evaluacion software" />
+		<meta name="author" content="Jose Angel Martinez"/>
 		
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="favicon.ico">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		
-		
+		<!-- vector map CSS -->
+		<link href="libs/bower_components/jasny-bootstrap/docs/dist/css/jasny-bootstrap.min.css" rel="stylesheet" type="text/css"/>
+
 		<!-- Custom CSS -->
 		<link href="dist/css/style.css" rel="stylesheet" type="text/css">
 	</head>
