--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 		<div class="wrapper pa-0">
 			<header class="sp-header">
 				<div class="sp-logo-wrap pull-left">
-					<a href="#">
+					<a href="index.html">
 						<img class="brand-img mr-10" src="dist/img/logo.png" alt="brand"/>
 						<!--<span class="brand-text">CertiSoft</span>-->
 					</a>
