se modifica la funcionalidad de exportación a pdf y contenido de condiciones de uso y cookies

--- a/registro.html
+++ b/registro.html
@@ -35,7 +35,9 @@
 					<a href="index.html">
 						<img class="brand-img mr-10" src="dist/img/logo.png" alt="brand"/>
 						<!--<span class="brand-text">CertiSoft</span>-->
+
 					</a>
+					<img data-toggle="tooltip" title="UCLM - ESII" style="display:block" class="brand-img mr-10" src="dist/img/uclm-escuela.png" alt="UCLM">
 				</div>
 				<div class="form-group mb-0 pull-right">
 					<span class="inline-block pr-10">¿Estás ya registrado?</span>
@@ -112,11 +114,20 @@
 														
 													</div>
 													<div class="modal-body" text-align: justify>
-														<h5 class="mb-15">Lorem ipsum dolor sit amet</h5>
-														<p style="text-align:justify;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis aliquam velit at elementum. Sed consectetur enim eros, vel luctus felis mollis in. Proin consectetur auctor ante, vel porttitor velit gravida at. Quisque eget feugiat augue. Maecenas a metus fringilla, placerat enim tempus, ornare erat. Morbi sit amet viverra lacus. Phasellus efficitur vitae lacus eu volutpat.</p>&nbsp;
+														<!--<h5 class="mb-15">Lorem ipsum dolor sit amet</h5>-->
+														<p style="text-align:justify;">Esta aplicación o herramienta web se ha desarrollado en un ámbito plenamente académico, es decir, no pretende ser una utilidad profesional para guiar el proceso de evaluación de la familia de normas ISO/IEC 33000. Certisoft simplemente es una herramienta orientativa, informativa y didáctica de los pasos y condiciones que se han de llevar a cabo para que, una empresa desarrolladora de software, pueda optar a la correspondiente certificación.</p>&nbsp;
 
-<p style="text-align:justify;">Morbi sit amet hendrerit nunc. Donec accumsan tempor arcu. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras semper ex sit amet augue hendrerit, scelerisque elementum lectus faucibus. Fusce porttitor leo eros, sed rhoncus elit pellentesque eu. Vivamus et arcu sed neque volutpat viverra in et est. Aenean luctus ante sed erat ultricies sodales. Phasellus luctus quam at enim cursus eleifend. Quisque sapien sapien, vestibulum nec justo sed, ornare fringilla augue. Phasellus congue mauris a rhoncus consequat.
+<p style="text-align:justify;">Una información más completa de los procesos asociados a los niveles de madurez que aparecen en <strong>CertiSoft</strong> se puede localizar en la publicación del <strong><a href="https://www.aenor.com/normas-y-libros/buscar-libros/detalle?c=b63d4c95-9180-e911-a84e-000d3a2fe6cc" target="_blank">Modelo de madurez de ingeniería del software Versión 2.0</strong>, en el que, principalmente, se ha apoyado este proyecto.
+</p>&nbsp;
+
+
+<p style="text-align:justify;">¿Tienes dudas, preguntas o sugerencias?</p>
+
+<p>Escríbenos a <a href="mailto:soporte.certisoft@gmail.com" style="text-decoration:none;color:#337ab7" target="_blank">soporte.certisoft@gmail.com</a>
+	<div style="margin-top:1%" class="pull-left"><p><a href="https://twitter.com/jamartinezWEB" target="_blank"><img alt="twitter" class="m_-5794247025677382622rrss CToWUd" src="https://github.com/jamweb/certisoft/blob/master/dist/img/twitter.png?raw=true" style="border-width:0px;border-style:solid;width:34px;height:34px" width="100%"></a></td><td width="40"><a href="https://www.linkedin.com/in/joseangelmartinezmartinez/" target="_blank"><img alt="linkedin" class="m_-5794247025677382622rrss CToWUd" src="https://github.com/jamweb/certisoft/blob/master/dist/img/linkedin.png?raw=true" style="border-width:0px;border-style:solid;width:34px;height:34px" width="100%"></a></p></div>
 </p>
+
+
 													</div>
 													<div class="modal-footer">
 														<button type="button" class="btn btn-success" data-dismiss="modal">Cerrar</button>
